--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>Tickets</title>
   </head>
   <body background-color="#f7e3d6">
